ADD_SUBDIRECTORY(siftPutativeMatches)
ADD_SUBDIRECTORY(robust_homography)
ADD_SUBDIRECTORY(robust_homography_guided)
ADD_SUBDIRECTORY(robust_fundamental)
ADD_SUBDIRECTORY(robust_essential)
ADD_SUBDIRECTORY(robust_essential_spherical)
ADD_SUBDIRECTORY(robust_essential_ba)
ADD_SUBDIRECTORY(undisto_Brown)

ADD_SUBDIRECTORY(exifParsing)
ADD_SUBDIRECTORY(sensorWidthDatabase)

ADD_SUBDIRECTORY(kvld_filter)
