ADD_SUBDIRECTORY(cameras_undisto_Brown)

ADD_SUBDIRECTORY(multiview_robust_homography)
ADD_SUBDIRECTORY(multiview_robust_homography_guided)
ADD_SUBDIRECTORY(multiview_robust_fundamental)
ADD_SUBDIRECTORY(multiview_robust_fundamental_guided)
ADD_SUBDIRECTORY(multiview_robust_essential)
ADD_SUBDIRECTORY(multiview_robust_essential_spherical)
ADD_SUBDIRECTORY(multiview_robust_essential_ba)

ADD_SUBDIRECTORY(exif_Parsing)

ADD_SUBDIRECTORY(features_repeatability)
ADD_SUBDIRECTORY(features_affine_demo)
ADD_SUBDIRECTORY(features_kvld_filter)
ADD_SUBDIRECTORY(features_siftPutativeMatches)
ADD_SUBDIRECTORY(features_image_matching)
